# wactorz

./: .dockerignore  .env.example  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  __init__.py  __main__.py  compose.dev.yaml  compose.native.yaml  compose.rust-dev.yaml  compose.yaml  config.py  fix_history.py  main.py  mkdocs.yml  monitor.html  monitor_server.py  pyproject.toml  remote_runner.py  repository.yaml  requirements-dev.txt  requirements-docs.txt  requirements.txt  run.sh  test_supervisor.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: backend-parity.yml  ci.yml  docs.yml  release.yml
agentflow/: __init__.py  __main__.py  cli.py  main.py  monitor_server.py
agentflow/agents/: catalog_agent.py  fuseki_agent.py  home_assistant_agent.py  home_assistant_hardware_agent.py  installer_agent.py  io_agent.py  llm_agent.py  main_actor.py  planner_agent.py  smart_cities_agent.py  udx_agent.py  weather_agent.py  wif_agent.py
agentflow/catalogue_agents/: doc_to_pptx_agent.py  image_gen_agent.py
agentflow/core/: registry.py
agents/: __init__.py  code_agent.py  dynamic_agent.py  fuseki_agent.py  home_assistant_agent.py  home_assistant_automation_agent.py  home_assistant_hardware_agent.py  home_assistant_map_agent.py  home_assistant_state_bridge_agent.py  installer_agent.py  llm_agent.py  main_actor.py  monitor_agent.py  nautilus_agent.py  news_agent.py  planner_agent.py  tick_agent.py  weather_agent.py  wiz_agent.py
api/js/: hierarchy.html  index.html
api/python/: search.js  wactorz.html
api/rust/: help.html  settings.html  src-files.js
config/fuseki-container/: Containerfile  entrypoint.sh
core/: __init__.py  actor.py  registry.py
docs/: _landing.html  agents.md  api.md  architecture.md  deployment.md  development.md  index.md  interfaces.md  mqtt_auto_wiring.md  mqtt_topics.md  pipelines.md  prometheus.md  python-api.md  quickstart.md  remote-nodes.md  versions.json  windows.md
frontend/: CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: robots.txt
frontend/src/: main.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
guide/: agents.html  architecture.html  development.html  index.html  interfaces.html  mqtt_auto_wiring.html  pipelines.html  prometheus.html  remote-nodes.html
ha-addon/: DOCS.md  Dockerfile  build.yaml  config.yaml  run.sh
infra/homeassistant/: configuration.yaml  secrets.yaml.example
infra/mosquitto/: mosquitto.conf
infra/nginx/: agentflow-snippet.conf  nginx-native.conf  nginx.conf  wactorz-snippet.conf
infra/prometheus/: alerts.yml  blackbox.yml  prometheus.yml  render-config.sh
interfaces/: chat_interfaces.py
node/: package.json  tsconfig.json
node/src/: index.ts
reference/: index.html
rust/: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
rust/crates/: Cargo.toml  Dockerfile
rust/crates/agentflow-agents/: Cargo.toml
rust/crates/agentflow-agents/src/: dynamic_agent.rs  fuseki_agent.rs  home_assistant_agent.rs  installer_agent.rs  io_agent.rs  lib.rs  llm_agent.rs  main_actor.rs  manual_agent.rs  ml_agent.rs  monitor_agent.rs  nautilus_agent.rs  news_agent.rs  os_agent.rs  planner_agent.rs  qa_agent.rs  smart_cities_agent.rs  tick_agent.rs  udx_agent.rs  weather_agent.rs  wif_agent.rs  wik_agent.rs  wis_agent.rs  wiz_agent.rs  wme_agent.rs
rust/crates/agentflow-core/: Cargo.toml
rust/crates/agentflow-core/src/: actor.rs  backend_parity.rs  lib.rs  message.rs  metrics.rs  persist.rs  publish.rs  registry.rs
rust/crates/agentflow-core/tests/: backend_parity.rs
rust/crates/agentflow-interfaces/: Cargo.toml
rust/crates/agentflow-interfaces/src/: cli.rs  lib.rs  rest.rs  ws.rs
rust/crates/agentflow-mqtt/: Cargo.toml
rust/crates/agentflow-mqtt/src/: client.rs  lib.rs  topics.rs
rust/crates/agentflow-server/: Cargo.toml
rust/crates/agentflow-server/src/: main.rs
rust/crates/wactorz-agents/: Cargo.toml
rust/crates/wactorz-agents/src/: catalog.rs  dynamic_agent.rs  fuseki_agent.rs  ha_actuator.rs  ha_state_bridge.rs  home_assistant_agent.rs  installer_agent.rs  io_agent.rs  lib.rs  llm_agent.rs  main_actor.rs  manual_agent.rs  ml_agent.rs  monitor_agent.rs  nautilus_agent.rs  news_agent.rs  one_off_actuator.rs  planner_agent.rs  qa_agent.rs  smart_cities_agent.rs  tick_agent.rs  udx_agent.rs  weather_agent.rs  wif_agent.rs  wik_agent.rs  wis_agent.rs  wme_agent.rs
rust/crates/wactorz-core/: Cargo.toml
rust/crates/wactorz-core/src/: lib.rs  message.rs  metrics.rs  registry.rs
rust/crates/wactorz-interfaces/: Cargo.toml
rust/crates/wactorz-interfaces/src/: cli.rs  lib.rs  rest.rs  ws.rs
rust/crates/wactorz-mqtt/: Cargo.toml
rust/crates/wactorz-mqtt/src/: client.rs  lib.rs  topics.rs
rust/crates/wactorz-server/: Cargo.toml
rust/crates/wactorz-server/src/: main.rs
scripts/: README.md  auto-sync.sh  build-native.sh  build.py  build_docs.py  check_backend_parity.py  deploy.sh  gen_ha_icons.py  mock-agents.mjs  package-full-release.sh  package-native.sh  package-release.sh  package-source.sh  rustdoc_index.py  start.bat  start.ps1
scripts/hooks/: build_hook.py
site/: index.html
site/guide/: agents.html  architecture.html  deployment.html  development.html  interfaces.html  pipelines.html  windows.html
site/reference/: api.html  python-api.html
static/app/: index.html  robots.txt  site.webmanifest
static/docs/: index.html
systemd/: agentflow.service  wactorz.service
tests/: __init__.py  backend_parity_harness.py  test_backend_parity.py  test_dev_mode_defaults.py  test_home_assistant_agent.py  test_home_assistant_map_agent.py  test_monitor_config_endpoints.py  test_one_off_actuator_flow.py  test_prometheus_config.py  test_prometheus_metrics.py  test_rest_contract.py
wactorz/: __init__.py  __main__.py  _version.py  cli.py  config.py  fuseki.py  fuseki_proxy.py  main.py  monitor_server.py  remote_runner.py
(+1343 files in other folders)
