[workspace]
resolver = "2"
members = [
    "rust/crates/wactorz-core",
    "rust/crates/wactorz-mqtt",
    "rust/crates/wactorz-agents",
    "rust/crates/wactorz-interfaces",
    "rust/crates/wactorz-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Wactorz Contributors"]
license = "Apache-2.0"
repository = "https://github.com/waldiez/wactorz"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WID — time-ordered, human-readable, collision-resistant identifiers
wid = { package = "waldiez-wid", git = "https://github.com/waldiez/wid" }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# Error handling
thiserror = "2.0.18"
anyhow = "1"

# MQTT
rumqttc = { version = "0.25.1", features = ["use-rustls"] }

# HTTP / WebSocket
axum = { version = "0.8.9", features = ["ws"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }
tokio-tungstenite = "0.29.0"

# HTTP client (LLM calls)
reqwest = { version = "0.13.2", features = ["json"], default-features = false }

# Async stream utilities
futures-util = "0.3"

# Dynamic scripting
rhai = { version = "1", features = ["sync", "serde"] }

# URL encoding (smart_cities_agent)
urlencoding = "2"

# UUID (supervisor)
uuid = { version = "1.23.1", features = ["v4"] }

# CLI
clap = { version = "4.6.1", features = ["derive", "env"] }

# Internal crates
wactorz-core = { path = "rust/crates/wactorz-core" }
wactorz-mqtt = { path = "rust/crates/wactorz-mqtt" }
wactorz-agents = { path = "rust/crates/wactorz-agents" }
wactorz-interfaces = { path = "rust/crates/wactorz-interfaces" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
