[workspace]
resolver = "2"
members = [
    "crates/agentflow-core",
    "crates/agentflow-mqtt",
    "crates/agentflow-agents",
    "crates/agentflow-interfaces",
    "crates/agentflow-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["AgentFlow Contributors"]
license = "Apache-2.0"
repository = "https://github.com/waldiez/agentflow"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WID — time-ordered, human-readable, collision-resistant identifiers
wid = { package = "waldiez-wid", git = "https://github.com/waldiez/wid" }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# Error handling
thiserror = "1"
anyhow = "1"

# MQTT
rumqttc = { version = "0.24", features = ["use-rustls"] }

# HTTP / WebSocket
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-tungstenite = "0.21"

# HTTP client (LLM calls)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async stream utilities
futures-util = "0.3"

# Dynamic scripting
rhai = { version = "1", features = ["sync", "serde"] }

# URL encoding (smart_cities_agent)
urlencoding = "2"

# UUID (supervisor)
uuid = { version = "1", features = ["v4"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Internal crates
agentflow-core = { path = "crates/agentflow-core" }
agentflow-mqtt = { path = "crates/agentflow-mqtt" }
agentflow-agents = { path = "crates/agentflow-agents" }
agentflow-interfaces = { path = "crates/agentflow-interfaces" }

# Dev / test utilities
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
