[workspace]

[package]
name = "wactorz-desktop"
version = "0.1.0"
description = "Wactorz desktop app (Tauri)"
authors = ["Lazaros Toumanidis"]
license = "MIT"
repository = "https://github.com/waldiez/wactorz"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
