[package]
name = "agentflow-agents"
description = "Agent implementations: LLM, orchestrator, dynamic, monitor, ML"
version.workspace = true
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agentflow-core = { workspace = true }
agentflow-mqtt = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
rhai = { workspace = true }
urlencoding = { workspace = true }
