[package]
name = "agentflow-interfaces"
description = "CLI, REST (axum), and WebSocket MQTT bridge interfaces"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agentflow-core = { workspace = true }
agentflow-mqtt = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
