[package]
name = "agentflow-mqtt"
description = "MQTT transport layer: async client wrapper and topic constants"
version.workspace = true
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agentflow-core = { workspace = true }
tokio = { workspace = true }
rumqttc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
