[package]
name = "agentflow-server"
description = "AgentFlow server binary entry point"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "agentflow"
path = "src/main.rs"

[dependencies]
agentflow-core = { workspace = true }
agentflow-mqtt = { workspace = true }
agentflow-agents = { workspace = true }
agentflow-interfaces = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
