[package]
name = "wactorz-agents"
description = "Agent implementations: LLM, orchestrator, dynamic, monitor, ML"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wactorz-core = { workspace = true }
wactorz-mqtt = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
rhai = { workspace = true }
urlencoding = { workspace = true }
