[[bin]]
name = "backend_parity"
path = "src/bin/backend_parity.rs"

[package]
name = "wactorz-core"
description = "Core actor model primitives: Actor trait, Message, ActorState, Registry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
