[package]
name = "wactorz-server"
description = "AgentFlow server binary entry point"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "wactorz"
path = "src/main.rs"

[dependencies]
wactorz-core = { workspace = true }
wactorz-mqtt = { workspace = true }
wactorz-agents = { workspace = true }
wactorz-interfaces = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
